# domain-driven-arch-python

./: .gitignore  README.md  main.py  pyproject.toml
adapters/: UserRepositoryInMemory.py
domain/: CreateUser.py  DeleteUser.py  ListUsers.py  User.py  UserRepository.py
test/: ApiClient.py  test_create_user.py  test_delete_user.py  test_hello.py
web/: CreateUser.py  CreateUserHandler.py  DeleteUserHandler.py  ListUsers.py  ListUsersHandler.py  main.py
