[tool.poetry]
name = "domain-driven-arch-python"
version = "0.1.0"
description = ""
authors = ["Luís Soares <lsoares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
pytest = "^6.2.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
